# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.1380 2010-09-06 11:22:58 mg Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

3.0.0 beta3 ????-??-??
 - 2010-09-06 Fixed bug#4411 - CustomerTicket plain print (PDF=off) shows wrong URLs.
 - 2010-09-06 Fixed bug#3521 - Error messages from password regex rules are
    truncated at comma which should't be there.
 - 2010-09-06 Fixed bug#5875 - Customer ticket print view has too much information.
 - 2010-09-06 Fixed bug#5867 - Navigation bar does not obey click path.
 - 2010-09-06 Fixed bug#5871 - Ticket information in dashboard is not properly aligned.
 - 2010-09-06 Fixed bug#5876 - Chinese UI issue.
 - 2010-09-03 Fixed bug#5873 - Permissions fields are displaced in the EditSpecification of a Stat.
 - 2010-09-03 Fixed bug#5812 - Customer Interface Password Sent dialog could be less confusing.
 - 2010-09-03 Fixed bug#5870 - Login boxes in Customer Interface are too small.
 - 2010-09-03 Fixed bug#5811 - Customer Interface account creation error handling
    does not work correctly.
 - 2010-09-03 Fixed bug#5632 - New Ticket Search Dialog takes about 3 Seconds to load, 3 seconds
    with no feedback. User Experience need to get improved. Faster load of the dialog.
 - 2010-09-03 Fixed bug#5789 - Use of uninitialized value $_ in Kernel/System/CustomerUser/LDAP.pm.
 - 2010-09-03 Fixed bug#5691 - Not possbible for a package to modify a file
    that belongs to another package.
 - 2010-09-02 Fixed bug#5860 - Tooltips are not displayed correct in Customer
    interface.
 - 2010-09-02 Fixed bug#5811 - Customer Interface account creation error
    handling does not work correctly.
 - 2010-09-02 Fixed bug#5818 - Standard height of the article list.